Hero Section Social Links

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="hero-cta">
                     <!-- <a href="#projects" class="btn btn-primary">View My Work</a> -->
                     <!-- <a href="#contact" class="btn btn-outline">Let’s Collaborate</a> -->
-                    <button class="button view-work">GET IN TOUCH</button>
+                    <button class="button view-work">VIEW MY WORK</button>
                     <button class="button collaborate">COLLABORATE</button>
                     <div class="social-links-hero">
                         <a href="#" aria-label="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
