Height and width of Projects Cards

--- a/index.html
+++ b/index.html
@@ -94,15 +94,13 @@
             <div class="about-content">
                 <h2 class="section-heading">About Me</h2>
                 <p class="bio-text">
-                    🌟 Full-stack developer with a passion for creating user-friendly solutions.
-                    Currently specializing in React and Django, I bring ideas to life through
-                    clean code and thoughtful design.
+                    ⚡ Backend engineer crafting ML-powered web applications <br>
+                    🚀 Python specialist (Django/FastAPI) building scalable APIs <br>
+                    📚 CS student obsessed with system design & AI integration <br>
+                    💡 Solving complex problems with clean, efficient code <br>
                 </p>
                 <p class="bio-text">
-                    I enjoy solving complex problems, optimizing user experiences, and continuously learning new
-                    technologies to stay ahead in this ever-evolving field. Whether it's crafting a seamless website,
-                    designing intuitive interfaces, or building powerful applications, I am always eager to take on new
-                    challenges.
+                    I bridge the gap between machine learning models and production-ready web systems. When I'm not studying algorithms, I'm building backend architectures that make AI features accessible through intuitive interfaces.
                 </p>
 
 
@@ -220,90 +218,113 @@
 
     <!-- Projects Cards -->
     <section class="gradient-background projects-section">
-        <div class="container">
-            <h2 class="section-title">🚀Featured Projects</h2>
+    <div class="container">
+        <h2 class="section-title">🚀Featured Projects</h2>
 
-            <div class="projects-grid">
-                <!-- Project Card 1 -->
-                <div class="project-card">
-                    <div class="card-image">
-                        <img src="./06_Certificate/resume-builder.jpg" alt="E-commerce Platform">
-                        <div class="image-overlay">
-                            <a href="#" class="preview-link">
-                                <i class="fas fa-expand"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="card-content">
-                        <h3 style="color: black;">RESUME BUILDER</h3>
-                        <p class="project-desc">Built a full-stack RESUME BUILDER with HTML, CSS, Django & Python
-                        </p>
-                        <div class="tech-stack">
-                            <span>HTML</span>
-                            <span>CSS</span>
-                            <span>Django</span>
-                            <span>Python</span>
-                        </div>
-                        <a href="#" class="case-study-link">
-                            View Case Study <i class="fas fa-arrow-right"></i>
+        <div class="projects-grid">
+            <!-- Project Card 1 -->
+            <div class="project-card">
+                <div class="card-image">
+                    <img src="./06_Certificate/resume-builder.jpg" alt="E-commerce Platform">
+                    <div class="image-overlay">
+                        <a href="#" class="preview-link">
+                            <i class="fas fa-expand"></i>
                         </a>
                     </div>
                 </div>
-
-                <!-- Project Card 2 -->
-                <div class="project-card">
-                    <div class="card-image">
-                        <img src="./06_Certificate/number_guessing_game.png" alt="fitness tracker Mobile App">
-                        <div class="image-overlay">
-                            <a href="#" class="preview-link">
-                                <i class="fas fa-expand"></i>
-                            </a>
-                        </div>
+                <div class="card-content">
+                    <h3 style="color: black;">RESUME BUILDER</h3>
+                    <p class="project-desc">Built a full-stack RESUME BUILDER with HTML, CSS, Django & Python</p>
+                    <div class="tech-stack">
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>Django</span>
+                        <span>Python</span>
                     </div>
-                    <div class="card-content">
-                        <h3 style="color: black;">Number Guessing Game</h3>
-                        <p class="project-desc">User have to guess a number, which select by the computer.</p>
-                        <div class="tech-stack">
-                            <span>HTML</span>
-                            <span>CSS</span>
-                            <span>javascript</span>
-                        </div>
-                        <a href="#" class="case-study-link">
-                            View Case Study <i class="fas fa-arrow-right"></i>
-                        </a>
-                    </div>
+                    <a href="#" class="case-study-link">
+                        View Case Study <i class="fas fa-arrow-right"></i>
+                    </a>
                 </div>
-
-                <div class="project-card">
-                    <div class="card-image">
-                        <img src="./06_Certificate/Higher_Lower_Game.png" alt="fitness tracker Mobile App">
-                        <div class="image-overlay">
-                            <a href="#" class="preview-link">
-                                <i class="fas fa-expand"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="card-content">
-                        <h3 style="color: black;">HIGHER LOWER GAME</h3>
-                        <p class="project-desc">Compare Which Account Has Most/Less Followers on instagram</p>
-                        <div class="tech-stack">
-                            <span>HTML</span>
-                            <span>CSS</span>
-                            <span>Django</span>
-                            <span>javascript</span>
-                        </div>
-                        <a href="#" class="case-study-link">
-                            View Case Study <i class="fas fa-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
-
-                <!-- Add remaining 6 project cards following same structure -->
             </div>
-            <!-- Add this button AFTER your projects-grid div -->
-            <!-- <button class="see-more-btn">See More</button> -->
+
+            <!-- Project Card 2 -->
+            <div class="project-card">
+                <div class="card-image">
+                    <img src="./06_Certificate/number_guessing_game.png" alt="fitness tracker Mobile App">
+                    <div class="image-overlay">
+                        <a href="#" class="preview-link">
+                            <i class="fas fa-expand"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="card-content">
+                    <h3 style="color: black;">Number Guessing Game</h3>
+                    <p class="project-desc">User have to guess a number, which select by the computer.</p>
+                    <div class="tech-stack">
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>javascript</span>
+                    </div>
+                    <a href="#" class="case-study-link">
+                        View Case Study <i class="fas fa-arrow-right"></i>
+                    </a>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <div class="card-image">
+                    <img src="./06_Certificate/Higher_Lower_Game.png" alt="fitness tracker Mobile App">
+                    <div class="image-overlay">
+                        <a href="#" class="preview-link">
+                            <i class="fas fa-expand"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="card-content">
+                    <h3 style="color: black;">HIGHER LOWER GAME</h3>
+                    <p class="project-desc">Compare Which Account Has Most/Less Followers on instagram</p>
+                    <div class="tech-stack">
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>Django</span>
+                        <span>javascript</span>
+                    </div>
+                    <a href="#" class="case-study-link">
+                        View Case Study <i class="fas fa-arrow-right"></i>
+                    </a>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <div class="card-image">
+                    <img src="./06_Certificate/Higher_Lower_Game.png" alt="fitness tracker Mobile App">
+                    <div class="image-overlay">
+                        <a href="#" class="preview-link">
+                            <i class="fas fa-expand"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="card-content">
+                    <h3 style="color: black;">HIGHER LOWER GAME</h3>
+                    <p class="project-desc">Compare Which Account Has Most/Less Followers on instagram</p>
+                    <div class="tech-stack">
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>Django</span>
+                        <span>javascript</span>
+                    </div>
+                    <a href="#" class="case-study-link">
+                        View Case Study <i class="fas fa-arrow-right"></i>
+                    </a>
+                </div>
+            </div>
+
+            <!-- Add more project cards as needed -->
         </div>
-    </section>
+        
+        <button class="see-more-btn">See More</button>
+    </div>
+</section>
 
 
 
@@ -420,38 +441,38 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            const projects = document.querySelectorAll('.project-card');
-            const seeMoreBtn = document.querySelector('.see-more-btn');
-            let visibleProjects = 3; // Initial visible projects
-            let isExpanded = false;
+    const projects = document.querySelectorAll('.project-card');
+    const seeMoreBtn = document.querySelector('.see-more-btn');
+    let visibleProjects = 3; // Initial visible projects
+    let isExpanded = false;
 
-            // Hide projects beyond initial visible count
+    // Hide projects beyond initial visible count
+    projects.forEach((project, index) => {
+        if (index >= visibleProjects) {
+            project.classList.add('hidden');
+        }
+    });
+
+    seeMoreBtn.addEventListener('click', () => {
+        isExpanded = !isExpanded;
+
+        if (isExpanded) {
+            // Show all projects
+            projects.forEach(project => project.classList.remove('hidden'));
+            seeMoreBtn.textContent = 'See Less';
+            seeMoreBtn.style.backgroundColor = '#e74c3c';
+        } else {
+            // Hide projects beyond initial count
             projects.forEach((project, index) => {
                 if (index >= visibleProjects) {
                     project.classList.add('hidden');
                 }
             });
-
-            seeMoreBtn.addEventListener('click', () => {
-                isExpanded = !isExpanded;
-
-                if (isExpanded) {
-                    // Show all projects
-                    projects.forEach(project => project.classList.remove('hidden'));
-                    seeMoreBtn.textContent = 'See Less';
-                    seeMoreBtn.style.backgroundColor = '#e74c3c';
-                } else {
-                    // Hide projects beyond initial count
-                    projects.forEach((project, index) => {
-                        if (index >= visibleProjects) {
-                            project.classList.add('hidden');
-                        }
-                    });
-                    seeMoreBtn.textContent = 'See More';
-                    seeMoreBtn.style.backgroundColor = '#3498db';
-                }
-            });
-        });
+            seeMoreBtn.textContent = 'See More';
+            seeMoreBtn.style.backgroundColor = '#3498db';
+        }
+    });
+});
 
 
 
