Add Carousel for Small Screens and some  more small changes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a class="nav-link mx-lg-2 active" aria-current="page" href="#Home-Section">Home</a>
+                            <a class="nav-link mx-lg-2 active" aria-current="page" href="#Hero-Section">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link mx-lg-2" href="#About-Section">About</a>
@@ -41,11 +41,11 @@
                             <a class="nav-link mx-lg-2" href="#Project-Section">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mx-lg-2" href="#Contact-Section">Contact</a>
+                            <a class="nav-link mx-lg-2" href="#contact">Contact</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link mx-lg-2" href="#Certificate-Section">Certificates</a>
-                        </li>
+                        </li> -->
 
                     </ul>
                     <div class="d-flex">
@@ -143,7 +143,7 @@
                         <span>Python</span>
                     </div>
                     <div class="meter-bar">
-                        <div class="meter-fill" style="width: 80%"></div>
+                        <div class="meter-fill" style="width: 90%"></div>
                     </div>
                 </div>
 
@@ -155,7 +155,7 @@
                         <span>C Programming</span>
                     </div>
                     <div class="meter-bar">
-                        <div class="meter-fill" style="width: 90%"></div>
+                        <div class="meter-fill" style="width: 70%"></div>
                     </div>
                 </div>
 
@@ -189,7 +189,7 @@
                         <span>CSS</span>
                     </div>
                     <div class="meter-bar">
-                        <div class="meter-fill" style="width: 85%"></div>
+                        <div class="meter-fill" style="width: 75%"></div>
                     </div>
                 </div>
 
@@ -200,7 +200,7 @@
                         <span>Java Script</span>
                     </div>
                     <div class="meter-bar">
-                        <div class="meter-fill" style="width: 1%"></div>
+                        <div class="meter-fill" style="width: 70%"></div>
                     </div>
                 </div>
 
@@ -212,7 +212,7 @@
                         <span>Django</span>
                     </div>
                     <div class="meter-bar">
-                        <div class="meter-fill" style="width: 1%"></div>
+                        <div class="meter-fill" style="width: 85%"></div>
                     </div>
                 </div>
 
@@ -225,7 +225,7 @@
 
 
 <!-- Projects Cards -->
-<section class="projects-section gradient-background">
+<section class="projects-section gradient-background" id="Project-Section">
   <div class="projects-container">
     <div class="section-header">
       <h2 class="section-title">Featured Projects</h2>
@@ -294,11 +294,7 @@
 
 
 
-
-
-
-
-<section id="contact" class="contact-section" id="Contact-Section">
+<section id="contact" class="contact-section">
     <div class="contact-container">
         <!-- Contact Form -->
         <div class="contact-form">
@@ -341,8 +337,6 @@
         </div>
     </div>
 </section>
-
-
 
 
 
