--- a/index.html
+++ b/index.html
@@ -297,12 +297,15 @@
                             helps users create professional resumes with ATS
                             analysis.</p>
                         <div class="tech-stack">
+                            <span>Python</span>
+                            <span>Django</span>
+                            <span>JavaScript</span>
                             <span>HTML</span>
                             <span>CSS</span>
-                            <span>Django</span>
-                            <span>Python</span>
                         </div>
-                        <a href="https://github.com/soaebhasan12/RESUME-CRAFTER-With-ATS-ANALYSIS" class="btn">View Case Study <i
+                        <a
+                            href="https://github.com/soaebhasan12/RESUME-CRAFTER-With-ATS-ANALYSIS"
+                            class="btn">View Case Study <i
                                 class="fas fa-arrow-right"></i></a>
                     </div>
 
@@ -310,25 +313,26 @@
                     <div class="project-card">
                         <div class="card-image">
                             <img
-                            src="./Certificate_and_PNGs/Higher_Lower_Game.png"
-                            alt="Higher Lower Game">
+                                src="./Certificate_and_PNGs/Higher_Lower_Game.png"
+                                alt="Higher Lower Game">
                         </div>
                         <h3 class="project-title">Higher Lower Game</h3>
                         <p class="project-desc">Social media popularity
                             comparison game.</p>
                         <div class="tech-stack">
+                            <span>Python</span>
+                            <span>Django</span>
+                            <span>Sessions</span>
+                            <span>JavaScript</span>
                             <span>HTML</span>
                             <span>CSS</span>
-                            <span>Django</span>
-                            <span>JavaScript</span>
                         </div>
                         <a
-                        href="https://github.com/soaebhasan12/INSTAGRAM-FOLLOWERs-GAME"
-                        class="btn">View Case Study <i
-                        class="fas fa-arrow-right"></i></a>
+                            href="https://github.com/soaebhasan12/INSTAGRAM-FOLLOWERs-GAME"
+                            class="btn">View Case Study <i
+                                class="fas fa-arrow-right"></i></a>
                     </div>
-                    
-                    
+
                     <!-- Project 3 -->
                     <div class="project-card">
                         <div class="card-image">
@@ -340,9 +344,12 @@
                         <p class="project-desc">Interactive game with difficulty
                             levels.</p>
                         <div class="tech-stack">
+                            <span>Python</span>
+                            <span>Django</span>
+                            <span>Sessions</span>
+                            <span>JavaScript</span>
                             <span>HTML</span>
                             <span>CSS</span>
-                            <span>JavaScript</span>
                         </div>
                         <a href="#" class="btn">View Case Study <i
                                 class="fas fa-arrow-right"></i></a>
@@ -415,7 +422,7 @@
                 src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
                 crossorigin="anonymous">
-</script>
+            </script>
 
             <script>
 document.addEventListener('DOMContentLoaded', function() {
