--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     </div>
 
                     <a
-                        href="./Certificate_and_PNGs/00-SOAEB-RESUME-by-SK-Mam.pdf"
+                        href="./Certificate_and_PNGs/#Soaeb-Hasan-Resume-Selected.pdf"
                         class="resume-button">
                         <i class="fas fa-file-download"></i>
                         Download Resume
